src/test/ui/unsafe/ranged_ints3.stderr
error[E0133]: borrow of layout constrained field is unsafe and requires unsafe function or block
  --> $DIR/ranged_ints3.rs:10:13
   |
LL |     let y = &x.0; //~ ERROR borrow of layout constrained field is unsafe
   |             ^^^^ borrow of layout constrained field
   |
   = note: references to fields of layout constrained fields lose the constraints

error: aborting due to previous error

For more information about this error, try `rustc --explain E0133`.
